# robocrystallographer

./: .buildinfo  .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.rst  CONTRIBUTORS.rst  LICENSE  Manifest.in  README.md  README.rst  changelog.html  cli.html  contributing.html  contributors.html  format.html  genindex.html  index.html  introduction.html  license.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  robocrys.condense.html  robocrys.describe.html  robocrys.featurize.html  robocrys.html  search.html  searchindex.js  setup.py  tasks.py
.circleci/: config.yml
.doctrees/: changelog.doctree  cli.doctree  contributing.doctree  contributors.doctree  format.doctree  genindex.doctree  index.doctree  introduction.doctree  license.doctree  modules.doctree  robocrys.condense.doctree  robocrys.describe.doctree  robocrys.doctree  robocrys.featurize.doctree
.github/: dependabot.yml
.github/workflows/: docs.yml  lint.yaml  release.yml  tests.yml
_modules/: index.html
_modules/robocrys/: adapter.html  cli.html  util.html
_sources/: index.rst.txt  introduction.rst.txt  robocrys.featurize.rst.txt
_static/: documentation_options.js
dev_scripts/: download_pubchem.py  process_formula_mappings.py  process_pubchem.py
docs/: changelog.html  cli.html  contributing.html  contributors.html  format.html  genindex.html  index.html  introduction.html  license.html  modules.html  objects.inv  py-modindex.html  robocrys.condense.html  robocrys.condense.tests.html  robocrys.describe.html  robocrys.describe.tests.html  robocrys.featurize.html  robocrys.html  robocrys.tests.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_sources/: contributors.rst.txt  format.rst.txt  index.rst.txt  robocrys.condense.tests.rst.txt  robocrys.describe.tests.rst.txt  robocrys.tests.rst.txt
docs/_static/: documentation_options.js
docs/admin/: version-releases.md
docs/src/: cli.rst  conf.py  format.rst  introduction.rst  license.rst  modules.rst  robocrys.condense.rst  robocrys.describe.rst  robocrys.rst
docs_rst/: Makefile
docs_rst/source/: cli.rst  conf.py  index.rst  license.rst  robocrys.condense.rst  robocrys.rst  (+1 more)
notebooks/: fingerprint_aflow_prototypes.ipynb  test.cif
robocrys/: __init__.py  _version.py  adapter.py  cli.py  component.py  condenser.py  description.py  fingerprint.py  mineral.py  mineral_matcher.py  molecule.py  site.py  site_describer.py  structure.py  util.py
robocrys-cli/: requirements.txt  setup.py
robocrys-core/: setup.py
tests/: test_adapter.py  test_cli.py  test_util.py
(+117 files in other folders)
