
[build-system]
requires = ["setuptools>=80.0.0","setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = "."
relative_to = "__file__"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "docs", "dev_scripts"]
include = ["robocrys"]

[tool.setuptools.package-data]
"robocrys.condense" = ["*.json.gz"]

[project]
name = "robocrys"
dynamic = ["version"]
requires-python = ">=3.10"
description="Automatic generation of crystal structure descriptions"
license = {text = "Modified BSD"}
authors = [
    {name = "Alex Ganose", email="aganose@lbl.gov"},
]
dependencies = [
    "spglib>=2.5.0",
    "numpy",
    "scipy",
    "pymatgen>=2024.1.26",
    "inflect",
    "networkx",
    "matminer>=0.9.2",
    "monty",
    "pubchempy",
    "pybtex",
]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",
    "Topic :: Other/Nonlisted Topic",
    "Operating System :: OS Independent",
]
keywords=["crystal-structure", "crystallography", "materials-science"]

[project.urls]
Homepage = "https://github.com/hackingmaterials/robocrystallographer"
Documentation = "https://hackingmaterials.lbl.gov/robocrystallographer/"

[project.optional-dependencies]
docs = [
    "sphinx>=5.3.0",
    "sphinx-argparse==0.5.2",
    "sphinx_rtd_theme==3.0.2",
    "sphinx-autodoc-typehints==3.0.1",
]
dev = ["tqdm", "pybel", "pebble", "maggma"]
tests = ["pytest", "pytest-cov", "pytest-xdist"]
cli = ["mp_api"]
lint = [
    "coverage==7.11.0",
    "codacy-coverage==1.3.11",
    "pycodestyle==2.14.0",
    "mypy==1.18.2",
    "pydocstyle==6.1.1",
    "flake8==7.3.0",
    "pylint==4.0.2",
    "black==25.9.0",
]
strict = [
    "spglib==2.6.0",
    "numpy==2.2.6,",
    "scipy==1.15.3",
    "pymatgen==2025.10.7",
    "inflect==7.5.0",
    "networkx==3.4.2",
    "matminer==0.9.3",
    "monty==2025.3.3",
    "pubchempy==1.0.5",
    "pybtex==0.25.1",
]

[project.scripts]
robocrys = "robocrys.cli:main"

[tool.mypy]
ignore_missing_imports = true
